test/invalid/InvalidReturnSuperType/TypeB.plume

/**
 * 
 * @author 37029, Juliana Franco
 *
class TypeB extends Object is

